// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button matches snapshot when disabled with tooltip 1`] = `
<div>
  <div
    data-testid="disabled-button-button-container"
    style="position: relative; display: inline-block; width: auto;"
  >
    <div
      data-tooltip="true"
      style="position: absolute; bottom: calc(100% + 8px); left: 50%; transform: translateX(-50%); background-color: rgb(30, 41, 59); color: rgb(255, 255, 255); padding: 0.5rem 0.75rem; border-radius: 0.375rem; font-size: 0.875rem; white-space: nowrap; opacity: 0; visibility: hidden; transition: all 150ms ease-in-out; z-index: 10;"
    >
      Please fill required fields
    </div>
    <button
      class=""
      disabled=""
      style="display: inline-flex; align-items: center; justify-content: center; font-family: \\"Inter\\", -apple-system, BlinkMacSystemFont, \\"Segoe UI\\", Roboto, sans-serif; font-weight: 500; border-radius: 0.375rem; transition: all 150ms ease-in-out; cursor: not-allowed; opacity: 0.6; width: 100%; white-space: nowrap; overflow: hidden; text-overflow: ellipsis; outline: none; background-color: rgb(37, 99, 235); color: rgb(255, 255, 255); padding: 0.75rem 1rem; font-size: 1rem; min-width: 120px;"
      type="button"
    >
      Disabled Button
    </button>
  </div>
</div>
`;

exports[`Button matches snapshot with default props 1`] = `
<div>
  <div
    data-testid="click-me-button-container"
    style="position: relative; display: inline-block; width: auto;"
  >
    <button
      class=""
      style="display: inline-flex; align-items: center; justify-content: center; font-family: \\"Inter\\", -apple-system, BlinkMacSystemFont, \\"Segoe UI\\", Roboto, sans-serif; font-weight: 500; border-radius: 0.375rem; transition: all 150ms ease-in-out; cursor: pointer; opacity: 1; width: 100%; white-space: nowrap; overflow: hidden; text-overflow: ellipsis; outline: none; background-color: rgb(37, 99, 235); color: rgb(255, 255, 255); padding: 0.75rem 1rem; font-size: 1rem; min-width: 120px;"
      type="button"
    >
      Click me
    </button>
  </div>
</div>
`;

exports[`Button matches snapshot with different variants 1`] = `
<div>
  <div
    data-testid="primary-button-container"
    style="position: relative; display: inline-block; width: auto;"
  >
    <button
      class=""
      style="display: inline-flex; align-items: center; justify-content: center; font-family: \\"Inter\\", -apple-system, BlinkMacSystemFont, \\"Segoe UI\\", Roboto, sans-serif; font-weight: 500; border-radius: 0.375rem; transition: all 150ms ease-in-out; cursor: pointer; opacity: 1; width: 100%; white-space: nowrap; overflow: hidden; text-overflow: ellipsis; outline: none; background-color: rgb(37, 99, 235); color: rgb(255, 255, 255); padding: 0.75rem 1rem; font-size: 1rem; min-width: 120px;"
      type="button"
    >
      Primary
    </button>
  </div>
</div>
`;

exports[`Button matches snapshot with different variants 2`] = `
<div>
  <div
    data-testid="outline-button-container"
    style="position: relative; display: inline-block; width: auto;"
  >
    <button
      class=""
      style="display: inline-flex; align-items: center; justify-content: center; font-family: \\"Inter\\", -apple-system, BlinkMacSystemFont, \\"Segoe UI\\", Roboto, sans-serif; font-weight: 500; border-radius: 0.375rem; transition: all 150ms ease-in-out; cursor: pointer; opacity: 1; width: 100%; white-space: nowrap; overflow: hidden; text-overflow: ellipsis; outline: none; background-color: transparent; color: rgb(37, 99, 235); padding: 0.75rem 1rem; font-size: 1rem; min-width: 120px; border: 2px solid #2563eb;"
      type="button"
    >
      Outline
    </button>
  </div>
</div>
`;

exports[`Button matches snapshot with different variants 3`] = `
<div>
  <div
    data-testid="secondary-button-container"
    style="position: relative; display: inline-block; width: auto;"
  >
    <button
      class=""
      style="display: inline-flex; align-items: center; justify-content: center; font-family: \\"Inter\\", -apple-system, BlinkMacSystemFont, \\"Segoe UI\\", Roboto, sans-serif; font-weight: 500; border-radius: 0.375rem; transition: all 150ms ease-in-out; cursor: pointer; opacity: 1; width: 100%; white-space: nowrap; overflow: hidden; text-overflow: ellipsis; outline: none; background-color: rgb(16, 185, 129); color: rgb(255, 255, 255); padding: 0.75rem 1rem; font-size: 1rem; min-width: 120px;"
      type="button"
    >
      Secondary
    </button>
  </div>
</div>
`;
